--- a/src/public/_locales/zh_CN/messages.json
+++ b/src/public/_locales/zh_CN/messages.json
@@ -1,8 +1,8 @@
 {
   "extName": {
-    "message": "社媒助手 - 开源版"
+    "message": "驼铃电商社媒助手"
   },
   "extDescription": {
-    "message": "社媒助手的完全开源版本，源代码：https://github.com/iszhouhua/social-media-copilot"
+    "message": "抖音、小红书、快手等社媒平台数据采集及运营辅助工具，支持一键下载无水印视频/图片、同步至飞书、一键复制、达人/作品/评论数据采集、批量导出数据、自定义文件名/字段等..."
   }
 }
